<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="functions">Functions</string>
    <string name="triggers">Triggers</string>
    
	<style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textSize">30dp</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
		<string name="applicationName">Good Vibrations</string>
	    <string name="name">Name</string>
	    <string name="type">Type</string>
	    <string name="volume">Volume</string>
	    <string name="vibrate">Vibrate</string>
	    <string name="toneName">Ringtone</string>
	    <string name="selectTone">Select Ringtone</string>
	    <string name="selectWallpaper">Select Wallpaper</string>
	    <string name="setFunctions">Set Functions</string>
	    <string name="done">Done</string>
	    <string name="addFunctionTxt">Add Function</string>
	    <string name="addTriggerTxt">Add Trigger</string>
	    <string name="Ringtone">Ringtone Volume</string>
	    <string name="Media">Media Volume</string>
	    <string name="Alarm">Alarm Volume</string>
	    <string name="Notification">Notification Volume</string>
	    <string name="setPriority">Set Priority</string>
	    
	    <string name="RingtoneTone">Ring Tone</string>
	    <string name="NotificationTone">Notification Tone</string>
	    <string name="AlarmTone">Alarm Tone</string>
	    
	    <!-- for time triggers-->
	    <string name="startTime">Start Time</string>
	    <string name="endTime">End Time</string>
	    <string name="addTimeTrigger">Add Time Trigger</string>
	    <string name="setTimes">Set Start and End Times</string>
	    <string name="repeat">Days Active</string>
	    <string name="mon">Monday</string>
	    <string name="tues">Tuesday</string>
	    <string name="wed">Wednesday</string>
	    <string name="thurs">Thursday</string>
	    <string name="fri">Friday</string>
	    <string name="sat">Saturday</string>
	    <string name="sun">Sunday</string>
	    <string name="repeatWeekly">Repeat Weekly?</string>
	    <!-- for location triggers -->
	    <string name="addLocTrigger">Add Location Trigger</string>
	    <string name="selectLocation">Select Location</string>
	    <string name="selectImage">Select Image</string>
	    <string name="wallpaperImage">Image</string>
        
</resources>

