<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/chkMonday"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/mon" />

    <CheckBox
        android:id="@+id/chkTuesday"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tues" />

    <CheckBox
        android:id="@+id/chkWednesday"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/wed" />

    <CheckBox
        android:id="@+id/chkThursday"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/thurs" />

    <CheckBox
        android:id="@+id/chkFriday"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/fri" />

    <CheckBox
        android:id="@+id/chkSaturday"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sat" />

    <CheckBox
        android:id="@+id/chkSunday"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sun" />

    <Button
        android:id="@+id/doneSetTimes"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:background="@drawable/btn_green"
        android:text="@string/done" />

</LinearLayout>